--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
     }
     .small { font-size: 0.92rem; color: var(--muted); }
     .footer { text-align: center; color: var(--muted); font-size: 0.86rem; margin-top: 10px; }
-    .hidden { display: none; }
     .spacer { height: 4px; }
     .label { font-size: 0.9rem; color: var(--muted); margin-right: 4px; }
   </style>
@@ -171,7 +170,6 @@
   </div>
 
   <script>
-    // ---------- Word banks ----------
     const CVC_WORDS = [
       { word: "mat", phonemes: ["m","a","t"], emoji: "🧘" },
       { word: "mad", phonemes: ["m","a","d"], emoji: "😠" },
@@ -198,7 +196,6 @@
       { word: "that", phonemes: ["th","a","t"], emoji: "👉" }
     ];
 
-    // ---------- UI refs ----------
     const phonemeBoxes = document.getElementById("phonemeBoxes");
     const wordDisplay = document.getElementById("wordDisplay");
     const emojiHint = document.getElementById("emojiHint");
@@ -218,7 +215,6 @@
     const btnRetry = document.getElementById("btnRetry");
     const btnReset = document.getElementById("btnReset");
 
-    // ---------- State ----------
     let current = null;
     let showWord = false;
     let tried = Number(localStorage.getItem("bb_tried") || 0);
@@ -237,7 +233,6 @@
       accEl.textContent = pct + "%";
     }
 
-    // ---------- Speech helpers ----------
     function speak(text, rate = 0.9, pitch = 1.0) {
       if (!("speechSynthesis" in window)) return;
       const u = new SpeechSynthesisUtterance(text);
@@ -249,47 +244,59 @@
     }
 
     function phonemeToSpeech(p) {
-      // Helps clearer letter-sound output for early readers
+      const key = (p || "").toLowerCase();
+
       const map = {
-        a: "aah", i: "ih", o: "aw",
-        c: "k", g: "guh", d: "duh", m: "mmm", t: "tuh",
-        ch: "ch", sh: "sh", th: "th"
+        m: "mmm",
+        t: "tuh",
+        d: "duh",
+        c: "kuh",
+        g: "guh",
+        ch: "ch",
+        sh: "sh",
+        th: "th"
       };
-      return map[p] || p;
+
+      if (key === "a") return "ah";   // short a
+      if (key === "i") return "ih";   // short i
+      if (key === "o") return "aw";   // short o
+
+      return map[key] || key;
     }
 
     async function saySounds() {
       if (!current) return;
-      feedback.innerHTML = 'Nice! Repeat each sound with your child.';
+      feedback.innerHTML = "Nice! Repeat each sound with your child.";
+
       for (const p of current.phonemes) {
-        speak(phonemeToSpeech(p), 0.72, 1.05);
-        await wait(850);
+        speak(phonemeToSpeech(p), 0.62, 1.0);
+        await wait(950);
       }
+
       if (autoBlend.checked) {
-        await wait(300);
+        await wait(350);
         blendWord();
       }
     }
 
     function blendWord() {
       if (!current) return;
-      speak(current.word, 0.78, 1.0);
-      feedback.innerHTML = 'Now your child says the whole word.';
+      speak(current.word, 0.72, 1.0);
+      feedback.innerHTML = "Now your child says the whole word.";
     }
 
     async function slowBlend() {
       if (!current) return;
-      // "m...a...t...mat" style
-      const seq = current.phonemes.join(" ... ") + " ... " + current.word;
-      speak(seq, 0.62, 1.0);
-      feedback.innerHTML = 'Use a finger sweep under the sounds while blending.';
+      const parts = current.phonemes.map(p => phonemeToSpeech(p));
+      const seq = parts.join(" ... ") + " ... " + current.word;
+      speak(seq, 0.56, 1.0);
+      feedback.innerHTML = "Use a finger sweep under the sounds while blending.";
     }
 
     function wait(ms) {
       return new Promise(res => setTimeout(res, ms));
     }
 
-    // ---------- Rendering ----------
     function getBank() {
       return difficulty.value === "digraph" ? DIGRAPH_WORDS : CVC_WORDS;
     }
@@ -336,7 +343,6 @@
       feedback.textContent = "Scores reset.";
     }
 
-    // ---------- Events ----------
     btnSounds.addEventListener("click", saySounds);
     btnBlend.addEventListener("click", blendWord);
     btnSlow.addEventListener("click", slowBlend);
@@ -350,7 +356,6 @@
     btnReset.addEventListener("click", resetStats);
     difficulty.addEventListener("change", randomWord);
 
-    // ---------- Init ----------
     renderStats();
     randomWord();
   </script>
